# gameoflife-opengl

./: .gitignore  CMakeLists.txt  README.md  test
assets/screens/: ingame_gui.xml  main_menu.xml  new_game.xml  settings_dialog.xml
assets/shaders/: basic.f.glsl  basic.v.glsl  blur.f.glsl  font.v.glsl  textured.f.glsl  textured.v.glsl
src/: main.cpp
src/gl/: Fbo.cpp  Fbo.h  Loader.cpp  Loader.h  MeshBuilder.cpp  MeshBuilder.h  Texture.h  TextureManager.cpp  TextureManager.h  Vao.cpp  Vao.h
src/gui/: Graphics.cpp  Graphics.h  GuiRenderer.cpp  GuiRenderer.h
src/gui/base/: Alignment.h  Component.cpp  Component.h  Container.h  Dialog.cpp  Dialog.h  IComponent.cpp  IComponent.h  IContainer.cpp  IContainer.h  IDialog.cpp  IDialog.h  IImageComponent.cpp  IImageComponent.h  IScreen.cpp  IScreen.h  ITextComponent.h  ImageComponent.cpp  ImageComponent.h  Screen.cpp  Screen.h  TextComponent.h
src/gui/components/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Label.cpp  Label.h  Panel.cpp  Panel.h  TextBox.cpp  TextBox.h  ToolButton.cpp  ToolButton.h
src/gui/dialogs/: SettingsDialog.cpp  SettingsDialog.h
src/gui/enums/: Cursor.h
src/gui/font/: Font.h  FontReader.cpp  FontReader.h  FontRenderer.cpp  FontRenderer.h  Glyph.h
src/gui/loader/: GuiXmlLoader.cpp  GuiXmlLoader.h
src/gui/screens/: IngameGuiScreen.cpp  IngameGuiScreen.h  MenuScreen.cpp  MenuScreen.h  NewGameScreen.cpp  NewGameScreen.h
src/io/: AssetLoader.cpp  AssetLoader.h  FieldIO.cpp  FieldIO.h  FontReader.h  XmlGuiLoader.cpp  XmlGuiLoader.h
src/model/: Field.cpp  Field.h  Field2d.cpp  Field2d.h  IField.cpp  IField.h
src/render/: Camera.cpp  Camera.h  GameOfLifeRenderer.cpp  GameOfLifeRenderer.h  GameWindow.cpp  GameWindow.h  Postproc.cpp  Postproc.h
src/render/shaders/: BasicShader.h  FontShader.h  HBlurShader.h  IShader.cpp  IShader.h  TexturedShader.h  VBlurShader.h
src/util/: Animated.h  AnimatedColor.h  AnimatedVec2.h  DoubleBuffer.h  Logger.cpp  Logger.h  Timer.h
